# img-to-video-svd

./: .env.template  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
images/logo/: img2vid logo ad.afdesign
outputs/: info.txt
src/ui/: svd_ui.py
src/util/: image_util.py  svd_util.py
