[tool.poetry]
name = "img-to-video-svd"
version = "1.0.0"
description = "Image to video using stable video diffusion"
authors = ["Sumit Sahoo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
gradio = "^4.44.0"
rich = "^13.8.1"
setuptools = "^69.5.1"
replicate = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
